# opengl-learning

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
assets/meshes/: ak_47.mtl  cube.blend  cube.fbx  cube.mtl
assets/shaders/: basic_fragment.glsl  basic_vertex.glsl  light_vertex.glsl  model-fs.glsl  model-vs.glsl  sample.fs  sample.vs
include/glsandbox/: Application.hpp  Camera3D.hpp  FrameTimer.hpp  GLObject.hpp  GLUtils.hpp  IndexBuffer.hpp  Mesh.hpp  Model.hpp  Shader.hpp  Texture.hpp  Transform3D.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  Window.hpp  defs.hpp  globject.hpp  glutils.hpp  shader.hpp
include/glsandbox/Core/: Function.hpp
include/glsandbox/Events/: Event.hpp
include/glsandbox/Renderer/: Renderer.hpp
src/: Application.cpp  Camera3D.cpp  FrameTimer.cpp  GLObject.cpp  GLUtils.cpp  IndexBuffer.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp  Transform3D.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  glutils.cpp  main.cpp
src/BEngine/: BEngine.hpp  BadEngine.hpp
src/BEngine/Core/: Application.cpp  Application.hpp  Event.hpp  FrameTimer.cpp  FrameTimer.hpp  Memory.hpp  Transform3D.cpp  Transform3D.hpp
src/BEngine/Math/: Vector2.hpp
src/BEngine/Render/: Camera3D.cpp  Camera3D.hpp  Renderer.cpp  Renderer.hpp
src/BEngine/Render/GL/: GLObject.hpp  GLUtils.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Material.hpp  Mesh.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Utils.cpp  Utils.hpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferAttribute.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp
src/BEngine/Render/Model/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp
src/BSandbox/: Main.cpp
